--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "profile-react",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.13.0",
+    "npm": "6.12.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
