--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "eact-dom": "^16.13.0",
+    "react-router-dom": "^5.12",
     "react-scripts": "3.4.0",
     "web-vitals": "^1.0.1"
   },
