--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "profile-react",
+  "name": "deploy",
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "12.13.0",
-    "npm": "6.12.0"
+    "npm": "5.7.1",
+    "node": "9.5.0"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "eact-dom": "^16.13.0",
-    "react-router-dom": "^5.12",
-    "react-scripts": "3.4.0",
-    "web-vitals": "^1.0.1"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-scripts": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
