--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "start": "node server/server.js",
   "name": "deploy",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
+    "react-typical": "",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
