--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "react-typical": "",
+    "react-icons/fi": "",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
