--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "deploy",
   "version": "0.1.0",
+  "homepage": "https://bhatara007.github.io/MyResume-ReactJS/",
   "private": true,
   "engines": {
     "npm": "5.7.1",
@@ -15,6 +16,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
