--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "node": "9.5.0"
   },
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
-    "react-typical": "",
+    "gh-pages": "^3.1.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-icons": "",
+    "react-scripts": "^1.1.1",
+    "react-typical": "",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,6 +40,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ],
+    "browserslist": [
+      ">0.2%",
+      "not dead",
+      "not ie <= 11",
+      "not op_mini all"
     ]
   }
 }
