--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
   "name": "deploy",
   "version": "0.1.0",
-  "homepage": "https://bhatara007.github.io/MyResume-ReactJS/",
   "private": true,
+  "homepage": "https://bhatara007.github.io/MyResume-ReactJS",
   "engines": {
     "npm": "5.7.1",
     "node": "9.5.0"
   },
   "dependencies": {
-    "gh-pages": "^3.1.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-icons": "",
-    "react-scripts": "^1.1.1",
-    "react-typical": "",
-    "web-vitals": "^1.0.1"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-scripts": "1.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "node server/server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -34,18 +30,13 @@
     "production": [
       ">0.2%",
       "not dead",
+      "not ie <= 11",
       "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "browserslist": [
-      ">0.2%",
-      "not dead",
-      "not ie <= 11",
-      "not op_mini all"
     ]
   }
 }
