--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "deploy",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bhatara007.github.io/MyResume-ReactJS",
+  "homepage": "https://bhatara007.github.io/myresume",
   "engines": {
     "npm": "5.7.1",
     "node": "9.5.0"
@@ -12,7 +12,8 @@
     "react-dom": "^16.2.0",
     "react-scripts": "^4.0.3",
     "react-typical": "^0.1.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "react-icons/fi": ""
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -41,6 +42,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^2.2.0"
   }
 }
